Version 0.8.0
- Added Admin Inventory
  - Customisable Notifications
  - Disabled Worlds
  - Enable/Disable Teleportation
  - Enable/Disable Trusting Members
- Added Inventory Module System
- Added Notification System
- Added Better adjacent chunk handling
- Added Customisable Notifications (TITLE, BOSS_BAR,
ACTION_BAR)
- Added Trusting Members to settlement
- Improved Configuration Handling
- Improved Flag System
- Improved Inventory System
- Improved Land Listener Notifications
- Improved Role Permissions
- Updated Config System (No longer config.yml, use config.json)
- Updated Confirmation System for inventories
- Updated Settlement Inventory to be dynamic (Module System)