@@ -1,4 +1,4 @@
-package com.huskydreaming.settlements.storage;
+package com.huskydreaming.settlements.storage.types;
 
 import com.google.common.base.Functions;
 import com.huskydreaming.huskycore.interfaces.Parseable;
@@ -6,13 +6,12 @@ import org.bukkit.ChatColor;
 import org.bukkit.configuration.file.FileConfiguration;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
 public enum Locale implements Parseable {
     PREFIX("&aSettlements: &7"),
-    ADMIN_HELP(Arrays.asList(
+    ADMIN_HELP(List.of(
             "&cAdmin Help:",
             "",
             "&f/admin claim [settlement] &8| &7Claims land for a settlement",
@@ -22,6 +21,44 @@ public enum Locale implements Parseable {
             "&f/admin setowner [settlement] [player] &8| &7Sets an owner for a settlement",
             "&f/admin unclaim &8| &7Unclaims land for a settlement"
     )),
+
+    // CONFIG
+    CONFIG_DISABLED_WORLDS("Worlds that will not be affected by settlements"),
+    CONFIG_PLACEHOLDER_STRING("Replacement when placeholder is null or empty"),
+    CONFIG_ROLES("Default roles when a settlement is made"),
+    CONFIG_FLAGS("Default flags when a settlement is made"),
+    CONFIG_TRUSTING("Allow/Disallow players to add trusted members"),
+    CONFIG_TELEPORTATION("Enable/disable teleportation completely"),
+    CONFIG_SETTLEMENT("Default values for when a settlement is made"),
+    CONFIG_NOTIFICATION("Type of notification entering/exiting claim"),
+
+    // Flags
+    FLAGS_ANIMAL_SPAWNING("Allow animals to spawn inside claim"),
+    FLAGS_MONSTER_SPAWNING("Allow monsters to spawn inside claim"),
+    FLAGS_ENTITY_GRIEF("Entities breaking/placing blocks inside claim"),
+    FLAGS_LEAF_DECAY("Leafs slowly decaying inside claim"),
+    FLAGS_EXPLOSIONS("Explosions by mobs or other reasons inside claim"),
+
+    //PERMISSIONS
+    PERMISSIONS_CLAIM_BREAK("Members can break blocks"),
+    PERMISSIONS_CLAIM_PLACE("Members can place blocks"),
+    PERMISSIONS_CLAIM_INTERACT("Members can interact with blocks"),
+    PERMISSIONS_CLAIM_LAND("Members can claim and un-claim land"),
+    PERMISSIONS_EDIT_MEMBERS("Access to edit members via commands and ui"),
+    PERMISSIONS_EDIT_CLAIMS("Access to edit claims via commands and ui"),
+    PERMISSIONS_EDIT_SPAWN("Access to edit spawn via commands and ui"),
+    PERMISSIONS_EDIT_ROLES("Access to edit roles via commands and ui"),
+    PERMISSIONS_EDIT_FLAGS("Access to edit flags via ui"),
+    PERMISSIONS_EDIT_DESCRIPTION("Access to edit claims via a command"),
+    PERMISSIONS_EDIT_TAGS("Access to edit tags via a commands"),
+    PERMISSIONS_MEMBER_KICK("Kick members from the settlement"),
+    PERMISSIONS_MEMBER_TRUST("Add/Remove trusted members"),
+    PERMISSIONS_MEMBER_INVITE("Invite members to the settlements"),
+    PERMISSIONS_MEMBER_KICK_EXEMPT("Exempts members from being kicked"),
+    PERMISSIONS_MEMBER_FRIENDLY_FIRE("Allows members to damage other members"),
+    PERMISSIONS_SPAWN_TELEPORT("Allows members to teleport to spawn"),
+
+    // Settlements
     SETTLEMENT_AUTO_CLAIM_ON("You will now claim land automatically when walking into the wilderness."),
     SETTLEMENT_AUTO_CLAIM_OFF("You will no longer claim land automatically."),
     SETTLEMENT_AUTO_CLAIM_OFF_MAX_LAND("You are not able to claim any more land, turning off auto claim."),
@@ -40,6 +77,7 @@ public enum Locale implements Parseable {
     SETTLEMENT_TAG_SHORT("The tag has to be greater than &b{0} &7characters."),
     SETTLEMENT_DISBAND("You have disbanded the settlement."),
     SETTLEMENT_ESTABLISHED("A settlement has already been established here."),
+    SETTLEMENT_ESTABLISHED_ADJACENT("You are too close to another settlement to create one here."),
     SETTLEMENT_EXIST("A settlement with that name already exists."),
     SETTLEMENT_JOIN("You have joined the &b{0} &7settlement."),
     SETTLEMENT_JOIN_PLAYER("&b{0} &7has joined the settlement."),
@@ -47,6 +85,7 @@ public enum Locale implements Parseable {
     SETTLEMENT_KICK_PLAYER("You have kicked &b{0} &7from the settlement."),
     SETTLEMENT_KICK_EXEMPT("This player can't be kicked from the settlement."),
     SETTLEMENT_LAND_ADJACENT("You must claim land that is adjacent to the settlement."),
+    SETTLEMENT_LAND_ADJACENT_OTHER("You can't claim land that is too close to another settlement."),
     SETTLEMENT_LAND_CLAIMED("This land has already been claimed."),
     SETTLEMENT_LAND_CLAIMED_MAX("Your settlement can't claim more than &b{0}&7 piece(s) of land."),
     SETTLEMENT_LAND_NOT_CLAIMED("This land has not been claimed."),
@@ -65,6 +104,8 @@ public enum Locale implements Parseable {
     SETTLEMENT_NOT_OWNER("You must be owner to proceed with this action."),
     SETTLEMENT_NOT_OWNER_TRANSFER("You must be the settlement owner to transfer ownership."),
     SETTLEMENT_IS_OWNER("You are already the owner of the settlement."),
+    SETTLEMENT_IS_MEMBER("The player &b{0} &7is already part of your settlement."),
+    SETTLEMENT_IS_TRUSTED("The player &b{0} &7is already trusted."),
     SETTLEMENT_OWNER_TRANSFERRED("You have transferred ownership of your settlement to &f{0}&7."),
     SETTLEMENT_PLAYER_EXISTS("You are already part of a settlement."),
     SETTLEMENT_PLAYER_HAS_SETTLEMENT("The player &b{0} &7already has a settlement."),
@@ -78,9 +119,23 @@ public enum Locale implements Parseable {
     SETTLEMENT_SPAWN("You have been teleported to the settlement spawn."),
     SETTLEMENT_SPAWN_NULL("The spawn for the settlement has been set."),
     SETTLEMENT_TELEPORT("You have teleported to &7x: &b{0}&7, z: &b{1}"),
+
+    SETTLEMENT_TRUST("The player &b{0} &7has been trusted."),
+    SETTLEMENT_TRUST_SELF("You can't trust yourself?!?"),
+    SETTLEMENT_TRUST_REMOVE("The player &b{0} &7is not longer trusted."),
     SETTLEMENT_LIST_NULL("No settlements have been created."),
-    SETTLEMENT_TITLE_HEADER("&l{0}"),
-    SETTLEMENT_TITLE_FOOTER("&7{0}"),
+
+    // Notifications
+    NOTIFICATION_TITLE_HEADER("{0}&l{1}"),
+    NOTIFICATION_TITLE_FOOTER("&7{0}"),
+    NOTIFICATION_BOSS_BAR("&7Entered {0}&l{1}"),
+    NOTIFICATION_ACTION_BAR("&7Entered {0}&l{1}"),
+    NOTIFICATION_WILDERNESS_TITLE_HEADER("&a&lWilderness"),
+    NOTIFICATION_WILDERNESS_TITLE_FOOTER("&7Fresh new land awaits you"),
+    NOTIFICATION_WILDERNESS_BOSS_BAR("&7Entered the &a&lWilderness"),
+    NOTIFICATION_WILDERNESS_ACTION_BAR("&7Entered the &a&lWilderness"),
+
+    // Helps pages
     HELP_PAGE_HEADER("&e&lSettlement Help: &a{0}&2/&a{1}"),
     HELP_PAGE_FORMAT("  &b{0}. &f{1}"),
     HELP_PAGE_LIMIT("There are only &b{0} &7pages available."),
@@ -88,6 +143,8 @@ public enum Locale implements Parseable {
     HELP_PAGE_PREVIOUS("<<"),
     HELP_PAGE_DISABLED("&7"),
     HELP_PAGE_ENABLED("&e"),
+
+    // Invitations
     INVITATION_DENIED("You have denied an invitation for &b{0}&7."),
     INVITATION_SELF("You can't invite yourself."),
     INVITATION_NULL("You do not have an invitation for &b{0}&7."),
@@ -99,9 +156,7 @@ public enum Locale implements Parseable {
     RELOAD("You have successfully reloaded all the configurations."),
     UNKNOWN_SUBCOMMAND("&b{0} &7is not a valid subcommand."),
     PLAYER_NULL("The player &b{0} &7has never played before."),
-    PLAYER_OFFLINE("The player &b{0} &7does not seem to be online."),
-    WILDERNESS_TITLE("&a&lWilderness"),
-    WILDERNESS_FOOTER("&7Fresh new land awaits you");
+    PLAYER_OFFLINE("The player &b{0} &7does not seem to be online.");
 
     private final String def;
     private final List<String> list;
