@@ -1,4 +1,4 @@
-package com.huskydreaming.settlements.storage;
+package com.huskydreaming.settlements.storage.types;
 
 import com.google.common.base.Functions;
 import com.huskydreaming.huskycore.interfaces.Parseable;
@@ -7,42 +7,51 @@ import org.bukkit.configuration.file.FileConfiguration;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 public enum Menu implements Parseable {
+
+    // ADMIN Menu
+    ADMIN_DISABLED_WORLD_TITLE("&e{0}"),
+    ADMIN_DISABLED_WORLD_LORE(List.of("&7This world is not available.")),
+    ADMIN_DISABLED_WORLDS_TITLE("&eDisabled Worlds"),
+    ADMIN_DISABLED_WORLDS_LORE(List.of("&f{0}", "", "&7Click to edit worlds")),
+
+    ADMIN_NOTIFICATION_TITLE("&eNotifications ⚠"),
+    ADMIN_NOTIFICATION_LORE(List.of(
+            "&7Current Notification: &f{0}",
+            "",
+            "&7Click to select notification type."
+    )),
+
     CONFIRMATION_YES_TITLE("&a&lYes"),
     CONFIRMATION_NO_TITLE("&c&lNo"),
 
     // Settlement Menu
     SETTLEMENT_TITLE("&e{0}. {1}"),
-    SETTLEMENT_LORE(Arrays.asList(
+    SETTLEMENT_LORE(List.of(
             "",
             "&7Owner: &f{0}",
             "&7Members: &b{1}&3/&b{2}",
             "&7Claims: &a{3}&2/&a{4}",
             "&7Roles: &e{5}&6/&e{6}"
     )),
-    SETTLEMENT_CITIZENS_TITLE("&aMembers"),
-    SETTLEMENT_CITIZENS_LORE(Collections.singletonList("&7Click to edit Members.")),
+    SETTLEMENT_MEMBERS_TITLE("&aMembers"),
+    SETTLEMENT_MEMBERS_LORE(List.of("&7Click to edit Members.")),
     SETTLEMENT_ROLES_TITLE("&aRoles"),
-    SETTLEMENT_ROLES_LORE(Collections.singletonList("&7Click to edit Roles.")),
+    SETTLEMENT_ROLES_LORE(List.of("&7Click to edit Roles.")),
     SETTLEMENT_ROLE_EDIT_TITLE("&a{0}. {1} &7{2}"),
     SETTLEMENT_ROLE_EDIT_DEFAULT("(Default)"),
-    SETTLEMENT_ROLE_EDIT_LORE(Collections.singletonList("&7Click to edit Role.")),
+    SETTLEMENT_ROLE_EDIT_LORE(List.of("&7Click to edit Role.")),
     SETTLEMENT_CLAIMS_TITLE("&aClaims"),
-    SETTLEMENT_CLAIMS_LORE(Collections.singletonList("&7Click to view claims.")),
+    SETTLEMENT_CLAIMS_LORE(List.of("&7Click to view claims.")),
     SETTLEMENT_FLAGS_TITLE("&aFlags"),
     SETTLEMENT_FLAGS_LORE(List.of("&7Click to adjust flags.", "", "&f&oFlags currently don't function")),
     SETTLEMENT_SPAWN_TITLE("&aSpawn"),
-    SETTLEMENT_SPAWN_LORE(Arrays.asList(
-            "&7Left-Click to teleport",
-            "&7Right-Click to set spawn"
-    )),
+    SETTLEMENT_SPAWN_LORE(List.of("&7Click to set spawn")),
     SETTLEMENT_DISBAND_TITLE("&cDisband"),
-    SETTLEMENT_DISBAND_LORE(Collections.singletonList("&7Click to disband settlement.")),
+    SETTLEMENT_DISBAND_LORE(List.of("&7Click to disband settlement.")),
     SETTLEMENT_INFO_TITLE("&aSettlement Info"),
     SETTLEMENT_INFO_LORE(List.of(
             "&7&O{0}",
@@ -54,7 +63,7 @@ public enum Menu implements Parseable {
     )),
     //Members Menu
     MEMBER_SET_OWNER_TITLE("&aSet Owner"),
-    MEMBER_SET_OWNER_LORE(Collections.singletonList("&7Click to set owner")),
+    MEMBER_SET_OWNER_LORE(List.of("&7Click to set owner")),
     MEMBER_SET_ROLE_TITLE("&aSet Role"),
     MEMBER_SET_ROLE_LORE(List.of(
             "&7Current Role: &f{0}. {1}",
@@ -63,19 +72,24 @@ public enum Menu implements Parseable {
             "&7Right-Click > Demote"
     )),
     MEMBER_KICK_TITLE("&aKick"),
-    MEMBER_KICK_LORE(Collections.singletonList("&7Remove from settlement.")),
+    MEMBER_KICK_LORE(List.of("&7Remove from settlement.")),
     // Citizens Menu
     MEMBERS_TITLE("&e{0}. {1}"),
-    MEMBERS_LORE(Arrays.asList(
+    MEMBERS_LORE(List.of(
             "&f{0} &7| {1}",
             "&7Last Online: &f{2}",
             "",
             "&7Click to edit player."
     )),
+
+    TRUSTED_TITLE("&e{0}. {1} &f[Trusted]"),
+    TRUSTED_LORE(List.of("&7Click to remove trusted player.")),
+
     MEMBERS_STATUS_OFFLINE("&cOffline"),
     MEMBERS_STATUS_ONLINE("&aOnline"),
 
     DISBAND_TITLE("Disband Settlement?"),
+    UN_TRUST_TITLE("Remove Trust for {0}?"),
 
     // Claims Menu
     CLAIMS_TITLE("&a{0}, {1}"),
@@ -83,9 +97,9 @@ public enum Menu implements Parseable {
 
     // Roles Menu
     ROLE_DELETE_TITLE("&cDelete"),
-    ROLE_DELETE_LORE(Collections.singletonList("&7Click to delete role.")),
+    ROLE_DELETE_LORE(List.of("&7Click to delete role.")),
     ROLE_DEFAULT_TITLE("&bDefault"),
-    ROLE_DEFAULT_LORE(Collections.singletonList("&7Set role as default."));
+    ROLE_DEFAULT_LORE(List.of("&7Set role as default."));
 
     private final String def;
     private final List<String> list;
